--- a/main.html
+++ b/main.html
@@ -3,10 +3,21 @@
 <html>
 
 <head>
+	<meta charSet = "UtF-8">
+	<meta name = "viewPort" content="width=device-width, initial-scale=1.0">
+	<title>Roman Numeral Conventor</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div class = "container">
+		<h1>Roman Numeral Character</h1>
+		<input type = "number" id="numberInput" placeHolder="Enter a number" min="1" max="3999">
+		<button onclick="convertToRoman()">Convert To Roman</button>
+		<div id="result"></div>
+	</div>
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
    </script>
